bk_ida/gccida/g3/expand_compound_operation
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6053:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v29; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6077:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v5.rtwint = ( __int64)v1->fld[0]; 
                      ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6097:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v14.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6100:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v15 = ( __int64)v1[1]; 
                ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6103:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v16.rtwint = ( __int64)v1[1].fld[0]; 
                       ^~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6113:29: error: use of undeclared identifier 'machine_mode'
v18 = gen_rtx_fmt_e( USE, ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v1->fld[0].rtx); 
                            ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6125:39: error: use of undeclared identifier 'machine_mode'
v12 = nonzero_bits( v1->fld[0].rtx, ( machine_mode)*( unsigned __int8 *)( v1->fld[0].rtwint + 2)); 
                                      ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6126:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v13.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6133:36: error: use of undeclared identifier 'machine_mode'
v1 = gen_rtx_fmt_e( ZERO_EXTEND, ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v13.rtx); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6144:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6149:51: error: use of undeclared identifier 'machine_mode'
v28 = nonzero_bits( *( rtx *)( v23.rtwint + 8), ( machine_mode)( unsigned __int8)v9); 
                                                  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6149:66: error: expected expression
v28 = nonzero_bits( *( rtx *)( v23.rtwint + 8), ( machine_mode)( unsigned __int8)v9); 
                                                                 ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6150:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v23.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6177:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v30.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6188:29: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
|| ( v31.rtwint = ( __int64)v1->fld[0], v26 = *(  struct rtx_def **)( v31.rtwint + 8), rtx_class[*( _WORD *)v26] != 60) 
                            ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6214:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v30.rtwint = ( __int64)v1->fld[0]; 
                       ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6223:44: error: use of undeclared identifier 'machine_mode'
v25 = simplify_shift_const( 0LL, ASHIFT, ( machine_mode)v11, v1->fld[0].rtx, v10 - ( v7 + v8)); 
                                           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6224:36: error: use of undeclared identifier 'rtx_code'; did you mean 'rtx_cost'?
v21 = simplify_shift_const( 0LL, ( rtx_code)( i + 89), ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v25, v24); 
                                   ^~~~~~~~
                                   rtx_cost
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/rtl.h:1787:12: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/combine.c:6224:53: error: too few arguments to function call, expected 2, have 1
v21 = simplify_shift_const( 0LL, ( rtx_code)( i + 89), ( machine_mode)*( ( unsigned __int8 *)v1 + 2), v25, v24); 
                                 ~~~~~~~~~~~        ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/rtl.h:1787:1: note: 'rtx_cost' declared here
extern int rtx_cost                     PARAMS ((rtx, enum rtx_code));
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/expand_compound_operation/src/obj/combine.o] Error 1
